added connection db text

--- a/DMS.Api/DMS.Api.csproj
+++ b/DMS.Api/DMS.Api.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="connected_db.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="dms.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
